fix alignment issues for theme switcher buttons across browsers

--- a/base.css
+++ b/base.css
@@ -74,6 +74,9 @@ body {
   & > .themeButton {
     background-color: var(--color-bg-button);
     color: var(--color-fg);
+    display: flex;
+    place-items: center;
+    place-content: center;
     border: .125rem solid var(--color-fg);
     border-radius: 100%;
     height: 36px;
